Fixed linebreak and z-index problems

--- a/app/style.scss
+++ b/app/style.scss
@@ -113,7 +113,6 @@ small {
 			&:hover .bit__delete,
 			&:hover .bit__handle {
 				display: block;
-				z-index: 10;
 			}
 			
 			.bit__text {
